@@ -1,3 +1,7 @@
+2012-07-04  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_healpix.c: Incorporate a polar fix (#176).
+
 2012-06-27  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/nad2bin.c: Fix byte swapping for bigendian platforms (#157)
